# stis_analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: 01_lacosmic.py  check_lacosmic_residual.py  convolve2d_reference.py  processing.py  run_lacosmic.py  run_lacosmic_pipeline.py  run_processing.py  run_processing_pipeline.py  run_reconstruct.py  run_reconstruct_pipeline.py
src/stis_analysis/core/: __init__.py  fits_reader.py  image.py  instrument.py  wave_constants.py
src/stis_analysis/lacosmic/: __init__.py  image.py  pipeline.py
src/stis_analysis/processing/: __init__.py  image.py  pipeline.py  wave_constants.py
src/stis_analysis/reconstruct/: __init__.py  cube.py  pipeline.py  velocity_field.py
tests/: conftest.py
tests/test_core/: test_fits_reader.py  test_image.py  test_instrument.py
tests/test_lacosmic/: test_image.py  test_pipeline.py
tests/test_processing/: test_image.py  test_pipeline.py
tests/test_reconstruct/: test_cube.py  test_pipeline.py  test_velocity_field.py
